--- a/cardano-api/cardano-api.cabal
+++ b/cardano-api/cardano-api.cabal
@@ -200,6 +200,7 @@ test-suite cardano-api-test
                       , cardano-api
                       , cardano-api:gen
                       , cardano-binary
+                      , cardano-data
                       , cardano-crypto
                       , cardano-crypto-class
                       , cardano-crypto-test
