Add unit test for deprecated tx body format

--- a/cardano-cli/cardano-cli.cabal
+++ b/cardano-cli/cardano-cli.cabal
@@ -190,6 +190,7 @@ test-suite cardano-cli-test
                       , yaml
 
   other-modules:        Test.Config.Mainnet
+                        Test.Cli.CliIntermediateFormat
                         Test.Cli.FilePermissions
                         Test.Cli.ITN
                         Test.Cli.JSON
