--- a/cabal.project
+++ b/cabal.project
@@ -242,8 +242,8 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/iohk-monitoring-framework
-  tag: 066f7002aac5a0efc20e49643fea45454f226caa
-  --sha256: 0s6x4in11k5ba7nl7la896g28sznf9185xlqg9c604jqz58vj9nj
+  tag: 7d1986ef317048f96b7c20b05c27c7d00a60ee35
+  --sha256: 0s6x4in11k5ba7nl7la896g28sznf9185xlqg9c604jqz58vj9nd
   subdir:
     contra-tracer
     iohk-monitoring
@@ -326,9 +326,9 @@ source-repository-package
 -- Drops an instance breaking our code. Should be released to Hackage eventually.
 source-repository-package
   type: git
-  location: https://github.com/input-output-hk/flat
-  tag: ee59880f47ab835dbd73bea0847dab7869fc20d8
-  --sha256: 1lrzknw765pz2j97nvv9ip3l1mcpf2zr4n56hwlz0rk7wq7ls4cm
+  location: https://github.com/Quid2/flat
+  tag: 44dd79ab3d6547afd7674876f0307995fc40dfcf
+  --sha256: 1lrzknw765pz2j97nvv9ip3l1mcpf2zr4n56hwlz0rk7wq7ls4cn
 
 constraints:
     hedgehog >= 1.0
@@ -351,6 +351,8 @@ package comonad
 package cardano-ledger-alonzo-test
   tests: False
 
+-- GHC 9 migration
+
 allow-newer:
   *:base,
   *:containers,
@@ -367,3 +369,28 @@ allow-newer:
   monoidal-containers:aeson,
   size-based:template-haskell,
   snap-server:attoparsec,
+
+-- https://github.com/well-typed/canonical-json/pull/8
+source-repository-package
+   type: git
+   location: https://github.com/erikd/canonical-json
+   tag: 38734cacc5b1f20428ee1991ba054627982a62d5
+
+-- https://github.com/input-output-hk/cardano-prelude/pull/169
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-prelude
+  tag: f3548c2bc620c8df4bc6e28830544f813ef533dc
+
+-- https://github.com/input-output-hk/nothunks/pull/18
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/nothunks
+  tag: be807ff5411a97c54e997706618c96bd686c2830
+
+-- https://github.com/input-output-hk/cardano-base/pull/306
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-base
+  tag: 28dd3105767ce285130b958e441f87bf497dc71f
+
