--- a/cabal.project
+++ b/cabal.project
@@ -375,22 +375,26 @@ source-repository-package
    type: git
    location: https://github.com/erikd/canonical-json
    tag: 38734cacc5b1f20428ee1991ba054627982a62d5
+   --sha256: 1g3gz26qi0g93q2nllyqxal4j5wpsydvrl297nmv8zq1zrnfr5nd
 
 -- https://github.com/input-output-hk/cardano-prelude/pull/169
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-prelude
   tag: f3548c2bc620c8df4bc6e28830544f813ef533dc
+  --sha256: 04h8n0m93rgr8xcynypjh6mc7kmb450c17cfvpyzpa36yld599fy
 
 -- https://github.com/input-output-hk/nothunks/pull/18
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/nothunks
   tag: be807ff5411a97c54e997706618c96bd686c2830
+  --sha256: 08jblb8w01ciwlkmjam78q0qmhkm63l5wh8qhxbdxxpv412a8rcb
 
 -- https://github.com/input-output-hk/cardano-base/pull/306
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
   tag: 28dd3105767ce285130b958e441f87bf497dc71f
+  --sha256: 12l6m20dnyl6gd0jhiy2v9zxm3risyancahc8v5rfrkm2lrd2ihp
 
