--- a/cabal.project
+++ b/cabal.project
@@ -373,6 +373,7 @@ allow-newer:
   size-based:template-haskell,
   snap-server:attoparsec,
   Unique:hashable,
+  tasty-hedgehog:hedgehog,
 
 -- https://github.com/well-typed/canonical-json/pull/8
 source-repository-package
