--- a/cabal.project
+++ b/cabal.project
@@ -373,10 +373,7 @@ allow-newer:
   size-based:template-haskell,
   snap-server:attoparsec,
   tasty-hedgehog:hedgehog,
-  Unique:hashable,
-  protolude:hashable,
-  ouroboros-network:hashable,
-  ral:hashable
+  *:hashable
 
 -- https://github.com/well-typed/canonical-json/pull/8
 source-repository-package
