--- a/cabal.project
+++ b/cabal.project
@@ -343,7 +343,7 @@ constraints:
   , network >= 3.1.1.0
   , HSOpenSSL >= 0.11.7.2
   , algebraic-graphs < 0.7
-  , protolude < 0.3.1
+  , protolude >= 0.3.2
 
 package snap-server
   flags: +openssl
