Changes to cabal.project

--- a/cabal.project
+++ b/cabal.project
@@ -117,6 +117,7 @@ package ouroboros-consensus-cardano-test
 
 package ouroboros-network
   tests: False
+  ghc-options: -XFlexibleContexts
 
 package ouroboros-network-framework
   tests: False
@@ -144,6 +145,9 @@ package io-classes
 
 package cardano-ledger-alonzo-test
   tests: False
+
+package cardano-crypto-wrapper
+  ghc-options: -Wno-missing-kind-signatures -Wno-unused-packages
 
 -- ---------------------------------------------------------
 
@@ -236,10 +240,11 @@ source-repository-package
     cardano-prelude
     cardano-prelude-test
 
+-- https://github.com/input-output-hk/goblins/pulls
 source-repository-package
   type: git
-  location: https://github.com/input-output-hk/goblins
-  tag: cde90a2b27f79187ca8310b6549331e59595e7ba
+  location: https://github.com/newhoggy/goblins
+  tag: 6a3e582951ff7d2709f5fddf3d09d733c2801e08
   --sha256: 17c88rbva3iw82yg9srlxjv2ia5wjb9cyqw44hik565f5v9svnyg
 
 source-repository-package
@@ -372,7 +377,7 @@ allow-newer:
   monoidal-containers:aeson,
   size-based:template-haskell,
   snap-server:attoparsec,
-  tasty-hedgehog:hedgehog,
+--  tasty-hedgehog:hedgehog,
   *:hashable
 
 -- https://github.com/well-typed/canonical-json/pull/8
@@ -389,3 +394,8 @@ source-repository-package
   tag: 0412f852cb45fd7bc93e4d9e232113cf064b6e37
   --sha256: 08jblb8w01ciwlkmjam78q0qmhkm63l5wh8qhxbdxxpv412a8rcb
 
+-- https://github.com/astanin/moo/pull/11
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/moo
+  tag: b9ab5acfd19c2b16161b30357c09dcf18e2655be
