Add modules:   Cardano.Api.Convenience.Query   Cardano.Api.Convenience.Construction   Cardano.Api.Convenience.Constraints This is the first stage of refactoring the transaction build command and simultaneously aims to expose a simplified interface to constructing and balancing a transaction.
Move Cardano.CLI.Environment to Cardano.Api.Environment. We now reuse
the SocketPath type throughout the cli and node

--- a/cardano-api/cardano-api.cabal
+++ b/cardano-api/cardano-api.cabal
@@ -54,6 +54,10 @@ library
                         Cardano.Api.Address
                         Cardano.Api.Block
                         Cardano.Api.Certificate
+                        Cardano.Api.Convenience.Constraints
+                        Cardano.Api.Convenience.Construction
+                        Cardano.Api.Convenience.Query
+                        Cardano.Api.Environment
                         Cardano.Api.Eras
                         Cardano.Api.Error
                         Cardano.Api.Fees
