--- a/cardano-api/cardano-api.cabal
+++ b/cardano-api/cardano-api.cabal
@@ -197,10 +197,10 @@ test-suite cardano-api-test
   type:                 exitcode-stdio-1.0
 
   build-depends:        aeson             >= 1.5.6.0
-                      , bytestring
+                      -- , bytestring
                       , cardano-api
                       , cardano-api:gen
-                      , cardano-binary
+                      -- , cardano-binary
                       , cardano-data
                       , cardano-crypto
                       , cardano-crypto-class
