--- a/bench/tx-generator/tx-generator.cabal
+++ b/bench/tx-generator/tx-generator.cabal
@@ -57,6 +57,7 @@ library
                        Cardano.TxGenerator.Genesis
                        Cardano.TxGenerator.PureExample
                        Cardano.TxGenerator.Setup.NixService
+                       Cardano.TxGenerator.Setup.NodeConfig
                        Cardano.TxGenerator.Types
                        Cardano.TxGenerator.Tx
                        Cardano.TxGenerator.Utils
@@ -121,6 +122,7 @@ library
                      , transformers
                      , transformers-except
                      , unordered-containers
+                     , yaml
 
   default-language:    Haskell2010
   default-extensions: OverloadedStrings
@@ -159,6 +161,7 @@ executable tx-generator-api
 
   build-depends:       base >=4.12 && <5
                      , aeson
+                     , bytestring
                      , filepath
                      , optparse-applicative-fork
                      , cardano-cli
